--- a/app/static/signup.css
+++ b/app/static/signup.css
@@ -27,6 +27,7 @@ main {
     justify-content: center;
     padding: 0;
     background-color:  #f0f2f5;
+    margin-top: 100px;
     border-radius: 20px;
     
 }
@@ -42,7 +43,7 @@ main {
 .loginPage {
     margin: 0 50px;
     width: 520px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     align-items: center;
 }
 
@@ -56,11 +57,11 @@ main {
 
 .loginPage h2{
     margin: 0;
-    margin-top: 20px;
     width: 100%;
     
 }
  #logintitle{
+    padding-top: 20px;
     font-size: 40px;
     align-items: center;
     width: 100%;    
@@ -97,11 +98,10 @@ input {
     background-color:white;
     color: black;
     font-size: 17px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .button:hover {
     background-color: blue;
     color: white;
 }
-
